# ReccomendationSystem

./: .gitignore  dvc.yaml  params.yaml  pyproject.toml
config/: config.yaml  logging.yaml
notebooks/: ranking_DNN_analysis.ipynb  ranking_deepfm_analysis.ipynb  ranking_xgb_analysis.ipynb  retrieval_analysis.ipynb
src/: ingest_data.py  process_data.py
src/common/: database.py  features.py  logger.py
src/ranking/: loss.py  train_tf.py  train_xgb.py
src/ranking/common/: dataset.py
src/ranking/tf_models/: deepfm.py
src/recsys_distribution_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retrieval/: dataset.py  model.py  train.py
